--- a/aboutme.html
+++ b/aboutme.html
@@ -1,1 +1,20 @@
+<!DOCTYPE html>
+<html>
+<body>
+
+<h1>Shraddha Prasad</h1>
+<img src="https://scontent-dft4-2.xx.fbcdn.net/v/t1.0-9/16602711_415288048812502_6406001020560163234_n.jpg?oh=8d6d6278fcbbc3bbf3ced1b7fd07cb1e&oe=59DC11FA" alt="Profile Picture" width="145" height="142">
+<p>I am a rising junior at American High School. I am sixteen years old. The summer of 2017 I joined Girls Who Code, a nonprofit organization that empowers women in the tech field. I hope to expand my technical knowledge as time goes on.</p>
+<h3>Likes and Dislikes</h3>
+<p>I like to dance, eat, run, read, and to learn about the world around me. <br> <br/> I dislike spiders, tomatoes, and reptiles. <p/>
+<h3>Fun Fact</h3>
+<p>I have never been skiing.<p/>
+<h3>Favorite Pages</h3>
+<a href="https://girlswhocode.com/">Girls Who Code<a/> <br> <br/>
+<a href="https://www.youtube.com/">Youtube<a/> <br> <br/>
+<img src="https://scontent-dft4-2.xx.fbcdn.net/v/t35.0-12/19620088_485037701837536_215287897_o.png?oh=89754d09883cc1c57bdbab244f537672&oe=59591B13" alt="Screenshot of Game" width ="145" height= "135">
+<p>This is a game I made with a partner on Scratch. In order to play, you must make the white ball move and avoid the other colored balls. The colored balls pass in random sizes and at random speeds that challenge the player."
+
+</body>
+</html>
 
