--- a/aboutme.html
+++ b/aboutme.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<h1>Shraddha Prasad</h1>
+<h1 style="color:Cyan">Shraddha Prasad</h1>
 <img src="https://scontent-dft4-2.xx.fbcdn.net/v/t1.0-9/16602711_415288048812502_6406001020560163234_n.jpg?oh=8d6d6278fcbbc3bbf3ced1b7fd07cb1e&oe=59DC11FA" alt="Profile Picture" width="145" height="142">
 <p>I am a rising junior at American High School. I am sixteen years old. The summer of 2017 I joined Girls Who Code, a nonprofit organization that empowers women in the tech field. I hope to expand my technical knowledge as time goes on.</p>
 <h3>Likes and Dislikes</h3>
