--- a/aboutme.html
+++ b/aboutme.html
@@ -7,7 +7,7 @@
 <p>I am a rising junior at American High School. I am sixteen years old. The summer of 2017 I joined Girls Who Code, a nonprofit organization that empowers women in the tech field. I hope to expand my technical knowledge as time goes on.</p>
 <h3 style="color:Red">Likes and Dislikes</h3>
 <p>I like to dance, eat, run, read, and to learn about the world around me. <br> <br/> I dislike spiders, tomatoes, and reptiles. <p/>
-<h3 style-"color:Green">Fun Fact</h3>
+<h3 style="color:Green">Fun Fact</h3>
 <p>I have never been skiing.<p/>
 <h3 style="color:Orange">Favorite Pages</h3>
 <a href="https://girlswhocode.com/">Girls Who Code<a/> 
