--- a/aboutme.html
+++ b/aboutme.html
@@ -16,7 +16,11 @@
   <br> <br/>
 <img src="https://scontent-dft4-2.xx.fbcdn.net/v/t35.0-12/19620088_485037701837536_215287897_o.png?oh=89754d09883cc1c57bdbab244f537672&oe=59591B13" alt="Screenshot of Game" width ="145" height= "135">
 <p>This is a game I made with a partner on Scratch. In order to play, you must make the white ball move and avoid the other colored balls. The colored balls pass in random sizes and at random speeds that challenge the player."
-
+<h3 style="color:Magenta">7/5/17 Python and Scratch</h3>
+<p>There are many similarities between Python and Scratch. One is the fundamentals of the coding. For example, both can draw shapes based on the code you write. They also both use loops, conditionals, and can use user input to make something new happen each time. Scratch, however, has code already typed up and blocks for you to choose from. Python is slightly more difficult because you have to write all the code by yourself. Syntax plays a bigger part in Python than in Scratch.</p>
+<p>Debugging our programs takes more time than actually writing them. Debugging wasn't hard as long as you had a systematic way to go about it. For example, while I was debugging I would test small parts of the code at a time and comment out the rest. That way, I could see exactly what was working and wasn't and narrow down the problem. Once I found where the mistake was it was easy to fix. Debugging can also get tedious, but necessary.</p>
+  
+  
 </body>
 </html>
 
