--- a/aboutme.html
+++ b/aboutme.html
@@ -19,7 +19,9 @@
 <h3 style="color:Magenta">7/5/17 Python and Scratch</h3>
 <p>There are many similarities between Python and Scratch. One is the fundamentals of the coding. For example, both can draw shapes based on the code you write. They also both use loops, conditionals, and can use user input to make something new happen each time. Scratch, however, has code already typed up and blocks for you to choose from. Python is slightly more difficult because you have to write all the code by yourself. Syntax plays a bigger part in Python than in Scratch.</p>
 <p>Debugging our programs takes more time than actually writing them. Debugging wasn't hard as long as you had a systematic way to go about it. For example, while I was debugging I would test small parts of the code at a time and comment out the rest. That way, I could see exactly what was working and wasn't and narrow down the problem. Once I found where the mistake was it was easy to fix. Debugging can also get tedious, but necessary.</p>
-  
+<h3 style="color:Magenta">7/5/17 Python and Scratch</h3>
+  <p>It was easy to think of an idea today, because there were so many options. We brainstormed a lot and came up with some great ideas before narrowing it down to our final project. It was also easier because we worked together. That way, my partner could do some parts while I did other things and it came together really well.</p>
+  <p>It was a little bit hard with all the if-loops. Because of how many nested loops we had, it was a little hard to keep track of them. Also, it was a little hard to get the code to loop. We also had to study some new commands which was a little hard, but still fun.</p>
   
 </body>
 </html>
