--- a/aboutme.html
+++ b/aboutme.html
@@ -25,10 +25,10 @@
 
 <script>
 function myFunction() {
-   document.getElementById("demo").innerHTML = "Paragraph changed.";
+   document.write(Thanks for visiting);
 }
 </script>
-<button type="button" onclick="myFunction()">Try it</button>
+<button type="button" onclick="myFunction()">Click me</button>
   
 </body>
 </html>
