--- a/aboutme.html
+++ b/aboutme.html
@@ -25,10 +25,10 @@
 
 <script>
 function myFunction() {
-   document.write(Thanks for visiting);
+   document.write(5 + 6);
 }
 </script>
-<button type="button" onclick="myFunction()">Click me</button>
+<button type="button" onclick="document.write(5 + 6)">Click me</button>
   
 </body>
 </html>
