--- a/aboutme.html
+++ b/aboutme.html
@@ -28,7 +28,7 @@ function myFunction() {
    document.write(5 + 6);
 }
 </script>
-<button type="button" onclick="document.write(5 + 6)">Click me</button>
+<button type="button" onclick=document.getElementById("demo").innerHTML = 5 + 6>Click me</button>
   
 </body>
 </html>
