--- a/aboutme.html
+++ b/aboutme.html
@@ -5,21 +5,21 @@
 <h1 style="font-family:verdana;text-align:center;">Shraddha Prasad</h1>
 <img src="https://scontent-dft4-2.xx.fbcdn.net/v/t1.0-9/16602711_415288048812502_6406001020560163234_n.jpg?oh=8d6d6278fcbbc3bbf3ced1b7fd07cb1e&oe=59DC11FA" alt="Profile Picture" width="145" height="142">
 <p>I am a rising junior at American High School. I am sixteen years old. The summer of 2017 I joined Girls Who Code, a nonprofit organization that empowers women in the tech field. I hope to expand my technical knowledge as time goes on.</p>
-<h3 style="color:Red">Likes and Dislikes</h3>
+<h3 style="font-family:verdana;text-align:center;">Likes and Dislikes</h3>
 <p>I like to dance, eat, run, read, and to learn about the world around me. <br> <br/> I dislike spiders, tomatoes, and reptiles. <p/>
-<h3 style="color:DarkGreen">Fun Fact</h3>
+<h3 style="font-family:verdana;text-align:center;">Fun Fact</h3>
 <p>I have never been skiing.<p/>
-<h3 style="color:Orange">Favorite Pages</h3>
+<h3 style="font-family:verdana;text-align:center;">Favorite Pages</h3>
 <a href="https://girlswhocode.com/">Girls Who Code<a/> 
   <br> <br/>
 <a href="https://www.youtube.com/">Youtube<a/> 
   <br> <br/>
 <img src="https://scontent-dft4-2.xx.fbcdn.net/v/t35.0-12/19620088_485037701837536_215287897_o.png?oh=89754d09883cc1c57bdbab244f537672&oe=59591B13" alt="Screenshot of Game" width ="145" height= "135">
 <p>This is a game I made with a partner on Scratch. In order to play, you must make the white ball move and avoid the other colored balls. The colored balls pass in random sizes and at random speeds that challenge the player."
-<h3 style="color:Magenta">7/5/17 Python and Scratch</h3>
+<h3 style="font-family:verdana;text-align:center;">7/5/17 Python and Scratch</h3>
 <p>There are many similarities between Python and Scratch. One is the fundamentals of the coding. For example, both can draw shapes based on the code you write. They also both use loops, conditionals, and can use user input to make something new happen each time. Scratch, however, has code already typed up and blocks for you to choose from. Python is slightly more difficult because you have to write all the code by yourself. Syntax plays a bigger part in Python than in Scratch.</p>
 <p>Debugging our programs takes more time than actually writing them. Debugging wasn't hard as long as you had a systematic way to go about it. For example, while I was debugging I would test small parts of the code at a time and comment out the rest. That way, I could see exactly what was working and wasn't and narrow down the problem. Once I found where the mistake was it was easy to fix. Debugging can also get tedious, but necessary.</p>
-<h3 style="color:Magenta">7/5/17 Python and Scratch</h3>
+<h3 style="font-family:verdana;text-align:center;">7/5/17 Python and Scratch</h3>
   <p>It was easy to think of an idea today, because there were so many options. We brainstormed a lot and came up with some great ideas before narrowing it down to our final project. It was also easier because we worked together. That way, my partner could do some parts while I did other things and it came together really well.</p>
   <p>It was a little bit hard with all the if-loops. Because of how many nested loops we had, it was a little hard to keep track of them. Also, it was a little hard to get the code to loop. We also had to study some new commands which was a little hard, but still fun.</p>
 
