--- a/aboutme.html
+++ b/aboutme.html
@@ -3,12 +3,19 @@
 <body>
 
 <h1 style="font-family:verdana;text-align:center;">Shraddha Prasad</h1>
-<img src="https://scontent-dft4-2.xx.fbcdn.net/v/t1.0-9/16602711_415288048812502_6406001020560163234_n.jpg?oh=8d6d6278fcbbc3bbf3ced1b7fd07cb1e&oe=59DC11FA" alt="Profile Picture" width="145" height="142">
-    img {
+<head>
+<style>
+img {
     display: block;
-    margin: auto;
-    width: 40%;
-        }
+    margin: 0 auto;
+}
+</style>
+</head>
+<body>
+
+<img src="https://scontent-dft4-2.xx.fbcdn.net/v/t1.0-9/16602711_415288048812502_6406001020560163234_n.jpg?oh=8d6d6278fcbbc3bbf3ced1b7fd07cb1e&oe=59DC11FA" alt="Profile Picture" style="width:40%">
+
+</body>
 <p style = "font-family:verduna;text-align:center;">I am a rising junior at American High School. I am sixteen years old. The summer of 2017 I joined Girls Who Code, a nonprofit organization that empowers women in the tech field. I hope to expand my technical knowledge as time goes on.</p>
 <h3 style="font-family:verdana;text-align:center;">Likes and Dislikes</h3>
 <p style = "font-family:verduna;text-align:center;">I like to dance, eat, run, read, and to learn about the world around me. <br> <br/> I dislike spiders, tomatoes, and reptiles. <p/>
