--- a/aboutme.html
+++ b/aboutme.html
@@ -20,9 +20,9 @@ img {
 <h3 style="font-family:verdana;text-align:center;">Fun Fact</h3>
 <p style = "font-family:verduna;text-align:center;">I have never been skiing.<p/>
 <h3 style="font-family:verdana;text-align:center;">Favorite Pages</h3>
-<a href="https://girlswhocode.com/">Girls Who Code<a/> 
+<a href="https://girlswhocode.com/" style="text-align:center;">Girls Who Code<a/> 
   <br> <br/>
-<a href="https://www.youtube.com/">Youtube<a/> 
+<a href="https://www.youtube.com/" style="text-align:center;">Youtube<a/> 
   <br> <br/>
 <img src="https://scontent-dft4-2.xx.fbcdn.net/v/t35.0-12/19620088_485037701837536_215287897_o.png?oh=89754d09883cc1c57bdbab244f537672&oe=59591B13" alt="Screenshot of Game" width ="145" height= "135" style="text-align:center;">
 <p style = "font-family:verduna;text-align:center;">This is a game I made with a partner on Scratch. In order to play, you must make the white ball move and avoid the other colored balls. The colored balls pass in random sizes and at random speeds that challenge the player."
