--- a/aboutme.html
+++ b/aboutme.html
@@ -33,6 +33,7 @@ img {
   <p>It was easy to think of an idea today, because there were so many options. We brainstormed a lot and came up with some great ideas before narrowing it down to our final project. It was also easier because we worked together. That way, my partner could do some parts while I did other things and it came together really well.</p>
   <p>It was a little bit hard with all the if-loops. Because of how many nested loops we had, it was a little hard to keep track of them. Also, it was a little hard to get the code to loop. We also had to study some new commands which was a little hard, but still fun.</p>
 
+<p id="demo">A Paragraph</p>
 <button type="button" onclick="myFunction()">Try it</button>
 
 <script>
