--- a/aboutme.html
+++ b/aboutme.html
@@ -41,6 +41,27 @@ function myFunction() {
    document.getElementById("demo").innerHTML = "Blue.";
 }
 </script>
+    
+<head>
+<style>
+img {
+    display: block;
+    margin: 0 auto;
+}
+</style>
+</head>
+
+<img src="https://mail.google.com/mail/u/0/?ui=2&view=btop&ver=1qarjayb7dfsd#attid%253Datt_15d3e2981a4af066_0.1" alt="Robot" style="width:25%">
+<head>
+<style>
+img {
+    display: block;
+    margin: 0 auto;
+}
+</style>
+</head>
+
+<img src="https://scontent-ort2-1.xx.fbcdn.net/v/t34.0-12/20046008_492224314452208_1322025177_n.jpg?oh=7def19b81b308763e79d6f40a3665586&oe=596A5EF6" alt="Robot" style="width:25%">    
   
 </body>
 </html>
