--- a/aboutme.html
+++ b/aboutme.html
@@ -24,7 +24,7 @@ img {
   <br> <br/>
 <a href="https://www.youtube.com/" style="text-align:center;">Youtube<a/> 
   <br> <br/>
-<img src="https://scontent-dft4-2.xx.fbcdn.net/v/t35.0-12/19620088_485037701837536_215287897_o.png?oh=89754d09883cc1c57bdbab244f537672&oe=59591B13" alt="Screenshot of Game" width ="145" height= "135" style="text-align:center;">
+<img src="https://scontent-dft4-2.xx.fbcdn.net/v/t35.0-12/19620088_485037701837536_215287897_o.png?oh=89754d09883cc1c57bdbab244f537672&oe=59591B13" alt="Screenshot of Game" style="width:145%">
 <p style = "font-family:verduna;text-align:center;">This is a game I made with a partner on Scratch. In order to play, you must make the white ball move and avoid the other colored balls. The colored balls pass in random sizes and at random speeds that challenge the player."
 <h3 style="font-family:verdana;text-align:center;">7/5/17 Python and Scratch</h3>
 <p style = "font-family:verduna;text-align:center;">There are many similarities between Python and Scratch. One is the fundamentals of the coding. For example, both can draw shapes based on the code you write. They also both use loops, conditionals, and can use user input to make something new happen each time. Scratch, however, has code already typed up and blocks for you to choose from. Python is slightly more difficult because you have to write all the code by yourself. Syntax plays a bigger part in Python than in Scratch.</p>
