--- a/aboutme.html
+++ b/aboutme.html
@@ -62,6 +62,7 @@ img {
 </head>
 
 <img src="https://scontent-ort2-1.xx.fbcdn.net/v/t34.0-12/20046008_492224314452208_1322025177_n.jpg?oh=7def19b81b308763e79d6f40a3665586&oe=596A5EF6" alt="Robot" style="width:25%">    
-  
+<img src="https://shraddhaprasad.github.io/portfolio/Paddleball.PNG" alt="Robot" style="width:25%">   
+    
 </body>
 </html>
